[package]
name    = "arrow-client"
version = "0.10.1"
authors = ["Ondrej Perutka <ondrej.perutka@angelcam.com>"]
license = "Apache-2.0"
readme  = "README.md"
build   = "build.rs"
edition = "2018"

[features]
discovery = ["lazy_static"]
threads = ["tokio/rt-multi-thread"]
exports = ["libc"]
all = ["discovery", "threads", "exports"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
bytes        = "1"
farmhash     = "1.1"
fs2          = "0.4"
json         = "0.12"
openssl      = "0.10"
time         = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.lazy_static]
version = "1.3"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt", "net", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec", "io"]

[dependencies.uuid]
version  = "1"
features = ["v4"]

[build-dependencies]
cc    = "1.0"
vcpkg = "0.2"

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = "s"
debug         = false
panic         = "abort"
lto           = true
codegen-units = 1
incremental   = false
