[package]
name = "arrow-client"
version = "0.13.0"
authors = ["Ondrej Perutka <ondrej.perutka@angelcam.com>"]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2024"

[features]
default = []
threads = ["tokio/rt-multi-thread"]
discovery = ["threads", "dep:str-reader", "dep:tokio-util"]
all = ["discovery", "threads"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
argh = "0.1"
bytes = "1"
farmhash = "1.1"
futures = "0.3"
libc = "0.2"
pin-project-lite = "0.2"
serde_json = "1"
tokio-native-tls = "0.3"
trait-variant = "0.1"
ttpkit-url = "0.1"

[dependencies.arrow-protocol]
git = "ssh://git@github.com/angelcam/arrow-protocol.git"
tag = "v0.5.0"

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_debug", "std"]

[dependencies.serde-lite]
version = "0.5"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["net", "rt", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
optional = true

[dependencies.str-reader]
version = "0.1"
optional = true

[dependencies.uuid]
version = "1"
features = ["v4"]

[build-dependencies]
cc = "1"
vcpkg = "0.2"

[dev-dependencies.serde-lite]
version = "0.5"
features = ["derive", "preserve-order"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies.tokio-util]
version = "0.7"
features = ["codec", "io"]

[profile.release]
opt-level = "s"
debug = false
panic = "abort"
lto = true
codegen-units = 1
incremental = false
